--- a/www/index.html
+++ b/www/index.html
@@ -402,7 +402,7 @@
                 <ul class="collapsible">
                     <li>
                         <div class="collapsible-header"><i class="material-icons"
-                                aria-hidden="true">description</i>Notification (Esup Auth)</div>
+                                aria-hidden="true">description</i>Notification (PUSH)</div>
                         <div class="collapsible-body">
                             <div class="row">
                                 <div class="col s12">
@@ -439,7 +439,7 @@
                     </li>
                     <li>
                         <div class="collapsible-header"><i class="material-icons" aria-hidden="true">description</i>Code
-                            Temporel(TOTP)</div>
+                            Temporel (TOTP)</div>
                         <div class="collapsible-body">
                             <div class="row">
                                 <div class="col s12">
@@ -618,7 +618,7 @@
                     </li>
                     <li>
                         <div class="collapsible-header"><i class="material-icons"
-                                aria-hidden="true">description</i>EsupNFC</div>
+                                aria-hidden="true">description</i>NFC (carte étudiante / pro )</div>
                         <div class="collapsible-body">
                             <div class="row">
                                 <div class="col s12">
